--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -766,10 +766,9 @@
   <div class="scrim" id="scrim"></div>
 
   {% if session_user %}
-    <a href="/owner/items/new" class="fab d-lg-none btn btn-primary rounded-circle shadow" title="عنصر جديد">
-  <i class="bi bi-plus-lg"></i>
-</a>
-
+    <a href="/owner/items/new" class="fab d-lg-none btn btn-primary rounded-circle shadow" title="عنصر جديد" style="width:56px;height:56px;display:flex;align-items:center;justify-content:center">
+      <i class="bi bi-plus-lg"></i>
+    </a>
   {% endif %}
 
   <!-- شريط سفلي (موبايل) -->
