--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -318,7 +318,8 @@
     body.modal-open { padding-right: 0 !important; }
   </style>
 
-  
+<style id="glass-tabbar">
+
     /* =========================
    GLASS UI – Mobile Tabbar
    (فقط ستايل، بدون تغيير HTML)
@@ -506,9 +507,9 @@
   
 
 
-  </style>
+</style>
 
-  <style id="sheet-align-fix">
+<style id="sheet-align-fix">
   /* محاذاة عناصر صفّ الشيت */
   #profileSheet .sheet__item{ display:flex; align-items:center; }
   #profileSheet .sheet__item .left{ display:flex; align-items:center; gap:10px; }
