--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!-- app/templates/base.html --> 
+bien mainetain ou non !<!-- app/templates/base.html -->  
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
@@ -318,7 +318,9 @@
     body.modal-open { padding-right: 0 !important; }
   </style>
 
-<style id="glass-tabbar">
+  
+  <style>
+
     /* =========================
    GLASS UI – Mobile Tabbar
    (فقط ستايل، بدون تغيير HTML)
@@ -527,7 +529,6 @@
     #profileSheet .sheet__item .label{ position:relative; top:-1px; }
   }
 </style>
-
 
 
   {% block head %}{% endblock %}
