--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -319,7 +319,7 @@ bien mainetain ou non !<!-- app/templates/base.html -->
   </style>
 
   
-  <style>
+  <style id="glass-tabbar">
 
     /* =========================
    GLASS UI – Mobile Tabbar
